
plugins {
  id 'java'
  // Provide convenience executables for trying out the grpc-server.
  id 'application'
    // ASSUMES GRADLE 2.12 OR HIGHER. Use plugin version 0.7.5 with earlier gradle versions
  id 'com.google.protobuf' version '0.8.8'
}

repositories {
  jcenter()
  maven { // The google mirror is less flaky than mavenCentral()
        url "https://maven-central.storage-download.googleapis.com/repos/central/data/" }
  mavenCentral()
  mavenLocal()
}
mainClassName = 'kernel.kernel'
sourceCompatibility = 1.8
targetCompatibility = 11
version = '1.3'
def grpcVersion = '1.28.0' // CURRENT_GRPC_VERSION
def protobufVersion = '3.11.0'
def protocVersion = protobufVersion

dependencies {
  implementation fileTree( dir: new File( rootDir, 'lib' ), include: '*.jar' )
  compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
  testImplementation 'junit:junit:4.12'
  implementation "io.grpc:grpc-protobuf:${grpcVersion}"
  implementation "io.grpc:grpc-stub:${grpcVersion}"
  implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
  compile group: 'io.netty', name: 'netty-all', version: '4.1.16.Final'
  implementation "io.grpc:grpc-netty-shaded:${grpcVersion}"
//   compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
}

protobuf {
    protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
    plugins {
        grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
    }
    generateProtoTasks {
        all()*.plugins { grpc {} }
    }
    generatedFilesBaseDir = "$projectDir/modules/proto"
}



sourceSets {
  main {
    java {
      srcDirs = [ 'modules/kernel/src',
                  'modules/handy/src',
                  'modules/misc/src',
                  'modules/rescuecore2/src',
                  'modules/standard/src',
                  'modules/clear/src',
                  'modules/collapse/src',
                  'modules/gis2/src',
                  'modules/human/src',
                  'modules/ignition/src',
                  'modules/maps/src',
                  'modules/sample/src',
                  'modules/traffic3/src',
                  'oldsims',
                  'modules/resq-fire/src',
                  'modules/proto/'
                ]
    }
    proto {
        srcDirs = [
            'proto'
        ]
    }
  }
}



test {
  useJUnit()
}

// run {
//     jvmArgs = ['--add-exports java.base/jdk.internal.misc=ALL-UNNAMED']
// }



jar {
  manifest {
    attributes( 'Implementation-Title': project.name,
                'Implementation-Version': project.version )
  }
}

clean.doFirst {
  delete file( new File( rootDir, 'jars' ) )
  delete file( new File( rootDir, 'test-results' ) )
}

/* Modules jar generation tasks */
task clearSourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'clear/**'
  }
  destinationDir file('jars/sources')
  archiveName 'clear-sources.jar'
}

task clearJar(type: Jar) {
  from(sourceSets.main.output) {
    include 'clear/**'
  }
  destinationDir file('jars')
  archiveName 'clear.jar'
}

task collapseSourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'collapse/**'
  }
  destinationDir file('jars/sources')
  archiveName 'collapse-sources.jar'
}

task collapseJar(type: Jar) {
  from(sourceSets.main.output) {
    include 'collapse/**'
  }
  destinationDir file('jars')
  archiveName 'collapse.jar'
}

task gis2SourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'gis2/**'
  }
  destinationDir file('jars/sources')
  archiveName 'gis2-sources.jar'
}

task gis2Jar(type: Jar) {
  from(sourceSets.main.output) {
    include 'gis2/**'
  }
  destinationDir file('jars')
  archiveName 'gis2.jar'
}

task handySourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'handy/**'
  }
  destinationDir file('jars/sources')
  archiveName 'handy-sources.jar'
}

task handyJar (type: Jar) {
  from(sourceSets.main.output) {
    include 'handy/**'
  }
  destinationDir file('jars')
  archiveName 'handy.jar'
}

task humanSourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'human/**'
  }
  destinationDir file('jars/sources')
  archiveName 'human-sources.jar'
}

task humanJar (type: Jar) {
  from(sourceSets.main.output) {
    include 'human/**'
  }
  destinationDir file('jars')
  archiveName 'human.jar'
}

task ignitionSourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'ignition/**'
  }
  destinationDir file('jars/sources')
  archiveName 'ignition-sources.jar'
}

task ignitionJar (type: Jar) {
  from(sourceSets.main.output) {
    include 'ignition/**'
  }
  destinationDir file('jars')
  archiveName 'ignition.jar'
}

task kernelSourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'kernel/**'
  }
  destinationDir file('jars/sources')
  archiveName 'kernel-sources.jar'
}

task kernelJar(type: Jar) {
  from(sourceSets.main.output) {
    include 'kernel/**'
  }
  destinationDir file('jars')
  archiveName 'kernel.jar'
}

task mapsSourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'maps/**'
  }
  destinationDir file('jars/sources')
  archiveName 'maps-sources.jar'
}

task mapsJar (type: Jar) {
  from(sourceSets.main.output) {
    include 'maps/**'
  }
  destinationDir file('jars')
  archiveName 'maps.jar'
}

task miscSourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'misc/**'
  }
  destinationDir file('jars/sources')
  archiveName 'misc-sources.jar'
}

task miscJar (type: Jar) {
  from(sourceSets.main.output) {
    include 'misc/**'
  }
  destinationDir file('jars')
  archiveName 'misc.jar'
}

task rescuecore2SourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'rescuecore2/**'
    exclude 'rescuecore2/standard/**'
  }
  into 'rescuecore2', {
    from 'modules/rescuecore2/resources/rescuecore2'
  }
  destinationDir file('jars/sources')
  archiveName 'rescuecore2-sources.jar'
}

task rescuecore2Jar (type: Jar) {
  from(sourceSets.main.output) {
    include 'rescuecore2/**'
    exclude 'rescuecore2/standard/**'
  }
  into 'rescuecore2', {
    from 'modules/rescuecore2/resources/rescuecore2'
  }
  destinationDir file('jars')
  archiveName 'rescuecore2.jar'
}

task resqFireSourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'rescuecore/**'
    include 'firesimulator/**'
  }
  destinationDir file('jars/sources')
  archiveName 'resq-fire-sources.jar'
}

task resqFireJar (type: Jar) {
  from(sourceSets.main.output) {
    include 'rescuecore/**'
    include 'firesimulator/**'
  }
  destinationDir file('jars')
  archiveName 'resq-fire.jar'
}

task sampleSourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'sample/**'
  }
  destinationDir file('jars/sources')
  archiveName 'sample-sources.jar'
}

task sampleJar (type: Jar) {
  from(sourceSets.main.output) {
    include 'sample/**'
  }
  destinationDir file('jars')
  archiveName 'sample.jar'
}

task standardSourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'rescuecore2/standard/**'
  }
  into 'rescuecore2/standard', {
    from 'modules/standard/resources/rescuecore2/standard'
  }
  destinationDir file('jars/sources')
  archiveName 'standard-sources.jar'
}

task standardJar (type: Jar) {
  from(sourceSets.main.output) {
    include 'rescuecore2/standard/**'
  }
  into 'rescuecore2/standard', {
    from 'modules/standard/resources/rescuecore2/standard'
  }
  destinationDir file('jars')
  archiveName 'standard.jar'
}

task traffic3SourceJar (type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from(sourceSets.main.allSource) {
    include 'traffic3/**'
  }
  from 'modules/traffic3/resources'
  destinationDir file('jars/sources')
  archiveName 'traffic3-sources.jar'
}

task traffic3Jar (type: Jar) {
  from(sourceSets.main.output) {
    include 'traffic3/**'
  }
  from 'modules/traffic3/resources'
  destinationDir file('jars')
  archiveName 'traffic3.jar'
}

/* Generate the compressed source in Jar files  */
task sourcesJar(type: GradleBuild) {
  tasks = [ 'clearSourceJar', 'collapseSourceJar', 'gis2SourceJar',
            'handySourceJar', 'humanSourceJar', 'ignitionSourceJar',
            'kernelSourceJar', 'mapsSourceJar', 'miscSourceJar',
            'rescuecore2SourceJar', 'resqFireSourceJar', 'sampleJar',
            'standardSourceJar', 'traffic3SourceJar'
          ]
}

/* Perform a complete build of the simulator */
task completeBuild(type: GradleBuild) {
  tasks = [ 'clean', 'build', 'clearJar', 'collapseJar', 'gis2Jar', 'handyJar',
            'humanJar', 'ignitionJar', 'kernelJar', 'mapsJar', 'miscJar',
            'rescuecore2Jar', 'resqFireJar', 'sampleJar', 'standardJar',
            'traffic3Jar', 'sourcesJar'
          ]
}

/* Generate a random scenario */
task randomScenario(type: JavaExec) {
  classpath = sourceSets.main.runtimeClasspath
  main = 'gis2.RandomScenarioGenerator'
  maxHeapSize = '2048m'
  args = [ 'maps/gml/test/map' ]
}

/* Open scenario editor */
task scenarioEditor(type: JavaExec) {
  classpath = sourceSets.main.runtimeClasspath
  main = 'gis2.scenario.ScenarioEditor'
  maxHeapSize = '2048m'
  args = [ 'maps/gml/test/map' ]
}

/* Open LogViewer */
task logViewer(type: JavaExec) {
  classpath = sourceSets.main.runtimeClasspath
  main = 'rescuecore2.log.LogViewer'
  maxHeapSize = '2048m'
  args = [ 'boot/logs/rescue.log' ]
}

/*Open gml editor */
task gmlEditor(type: JavaExec) {
  classpath = sourceSets.main.runtimeClasspath
  main = 'maps.gml.editor.GMLEditor'
  maxHeapSize = '2048m'
  args = [ 'maps/gml/test/map/map.gml' ]
}

// task fireControlDemo(type: CreateStartScripts) {
//     mainClassName = 'kernel.Kernel'
//     applicationName ='rcrs-grpc-connection'
//     outputDir = new File(project.buildDir, 'tmp')
//     classpath = sourceSets.main.runtimeClasspath
// }


